Thu Dec 12 16:26:31 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* marshal.c (r_object0): singleton class instance can't be loaded.
	  (ruby-bugs-ja:PR#366)

Thu Dec 12 03:05:16 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): 1.7 sprintf() backported.

Wed Dec 11 23:35:43 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb.in (create_makefile): -no-undefined -> --no-undefined.

Wed Dec 11 20:48:03 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/getoptlong.rb (GetoptLong::Error): provide a common ancestor
	  for GetoptLong error classes (RCR#129).

Mon Dec  9 15:13:14 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.6.8 release candidate.

Fri Dec  6 14:13:59 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (num_cmp): define Numeric#<=>, remove Numeric#==.

Tue Dec  3 01:48:06 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (backtrace): should ignore line 0 frame.

Sun Dec  1 22:43:29 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* win32/win32.c (win32_stat): empty path is invalid, and return
	  ENOENT rather than EBADF in such case.  [ruby-talk:57177]

Wed Nov 27 17:42:56 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/syslog/syslog.c: Cut redundancy.

	* ext/syslog/syslog.c: Do not leak ident.

	* ext/syslog/syslog.c, ext/syslog/test.rb: Syslog.close should
	  raise RuntimeError when not opened.

	* ext/syslog/syslog.c, ext/syslog/test.rb:
	  Syslog.{ident,options,facility,mask} should all return nil when
	  not opened.

	* ext/syslog/syslog.c, ext/syslog/test.rb: Change back the output
	  format of inspect().

Wed Nov 27 16:27:59 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/test.rb: Switch from RUnit to Test::Unit.

Wed Nov 27 16:22:09 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/syslog/syslog.c: Fix a problem where Syslog#ident was not
	  marked and could thus be GC'd.

	* ext/syslog/test.rb: Switch from RUnit to Test::Unit.
